@startuml 

skinparam class {
    BackgroundColor LightBlue
    ArrowColor Red
    BorderColor DarkBlue
}
title BlackJackCardGame
class Card
class BlackJackCard
Card "is" <|-- BlackJackCard

Card : face:str
Card : suit:str
Card : blc:BlackJackCard
Card : __init__()
Card : __repr__()
Card : getValue():int

BlackJackCard : getValue():int

Deck "1" o-- "many" BlackJackCard
Deck : stackOfCards:list
Deck : __init__()
Deck : shuffle()
Deck : nextCard()

class Player
class Dealer
Player <|-- Dealer

Player "many" --o "1" Game
Player : addCardToHand()
Player : increaseWin()
Player : cleanHand()
Player : getHandValue():int
Player : hit():bool
Player : showHand()
Player : getHandSize()
Player : name:str
Player : hand:list
Player : win:int

Dealer : hit():bool
Dealer : shuffle()
Dealer : deal():Card
Dealer : showHand()
Dealer : name:str
Dealer : hand:list
Dealer : win:int
Dealer : deck:Deck

Dealer "1" o-- "many" Deck

Game "1" -- "1" Dealer
Game : play()
Game : dealCards()
Game : check4Winer()
Game : players:list
Game : dealer:Dealer

@enduml